# serde-this-or-that

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml  publish.yml  release.yml  test.yml
benches/: README.md  as_bool.rs  as_u64.rs  serde_with.rs
examples/: README.md  as_bool.rs  as_f64.rs  as_i64.rs  as_opt_bool.rs  as_opt_f64.rs  as_opt_i64.rs  as_opt_u64.rs  as_string.rs  as_u64.rs  demo.rs  my_example.rs
examples/optionals/: as_bool.rs  as_f64.rs  as_i64.rs  as_string.rs  as_u64.rs
src/: de.rs  de_impl.rs  de_impl_opt.rs  lib.rs
