[package]
name = "serde-this-or-that"
version = "0.0.1"
authors = ["Ritvik Nag <rv.kvetch@gmail.com>"]
description = "Custom deserialization for fields that can be specified as multiple types."
documentation = "https://docs.rs/serde-this-or-that"
repository = "https://github.com/rnag/serde-this-or-that"
readme = "README.md"
keywords = ["serde", "utilities", "untagged-enum", "deserialization", "this-or-that"]
categories = ["encoding"]
license = "MIT"
edition = "2021"

# See here for more info: https://blog.rust-lang.org/2020/03/15/docs-rs-opt-into-fewer-targets.html

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
criterion = "0.3.5"
log = "^0.4"
sensible-env-logger = "0.2.0"
serde_json = "^1"
timeit = "0.1.2"
# version_sync: to ensure versions in `Cargo.toml` and `README.md` are in sync
version-sync = "0.9.4"
# cargo-bump: to bump package version and tag a commit at the same time.
# actually, the docs recommend installing this globally:
#   $ git clone https://github.com/rnag/cargo-bump && cd cargo-bump && cargo install --path . && cd .. && rm -rf cargo-bump

### FEATURES #################################################################

[features]

[[bench]]
name = "as_u64"
harness = false

[[bench]]
name = "as_bool"
harness = false
